Flow-control and compression in PoolNetwork.